package com.eggroll.core.constant;

public class StringConstants {

    public static String  UNKNOWN = "UNKNOWN";

    public static String  PROTOBUF = "PROTOBUF";

    public static String  SLASH = "/";

    public static String  GRPC_PARSE_FROM = "parseFrom";

    public static String  AT = "@";
    public static String  AND = "&";
    public static String  EQUAL = "=";

    public static String  DOLLAR = "$";

    public static String  DOT = ".";
    public static String  COLON = ":";
    public static String  SEMICOLON = ";";
    public static String  DASH = "-";
    public static String  UNDERLINE = "_";
    public static String  DOUBLE_UNDERLINES = "__";
    public static String  COMMA = ",";
    public static String  HASH = "#";

    public static String  HOST = "host";
    public static String  PORT = "port";

    public static String  META = "meta";
    public static String  SEND_START = "send_start";
    public static String  SEND_END = "send_end";

    public static String  DEFAULT = "default";

    public static String  ROLE_EGG = "egg";
    public static String  ROLE_ROLL = "roll";
    public static String  ROLE_EGGROLL = "eggroll";
    public static String  EGGROLL_COMPATIBLE_ENABLED = "eggroll.compatible.enabled";
    public static String  FALSE = "false";
    public static String  TRUE = "true";

    public static String  CLUSTER_COMM = "__clustercomm__";
    public static String  FEDERATION = "__federation__";
    public static String  EGGROLL = "eggroll";

    public static String  COMPUTING = "computing";
    public static String  STORAGE = "storage";

    public static String  EMPTY = "";
    public static String  SPACE = " ";

    public static String  LOGGING_A_THROWABLE = "logging a Throwable";

    public static String  ROUTE = "route";

    public static String  NULL = "null";
    public static String  NULL_WITH_BRACKETS = "[${NULL}]";

    public static String  LF = "\n";
    public static String  LFLF = "\n\n";



    public static String  PATH = "path";
    public static String  TYPE = "type";
    public static String  SIZE = "size";

    public static String  ROLL_PAIR = "rollpair";
    public static String  ROLL_FRAME = "rollframe";
    public static String  LMDB = "lmdb";
    public static String  LEVELDB = "leveldb";
    public static String  FILE = "file";
    public static String  HDFS = "hdfs";
    public static String  NETWORK = "network";
    public static String  CACHE = "cache";
    public static String  QUEUE = "queue";
    public static String  TOTAL = "total";

    public static String  LOCALHOST = "localhost";

    public static String  STORE_TYPE = "storeType";
    public static String  STORE_TYPE_SNAKECASE = "store_type";
    public static String  NAMESPACE = "namespace";
    public static String  NAME = "name";
    public static String  TOTAL_PARTITIONS = "totalPartitions";
    public static String  TOTAL_PARTITIONS_SNAKECASE = "total_partitions";
    public static String  PARTITION_ID_SNAKECASE = "partition_id";
    public static String  PARTITIONER = "partitioner";
    public static String  SERDES = "serdes";
    public static String  TRANSFER_BROKER_NAME = "transfer_broker_name";

}
